# ollama-rs

./: .gitignore  ARCHITECTURE.md  BLOCKERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEV_NOTES.md  README.md
.claude/: settings.local.json
.claude/commands/: continue-session.md  execute-impl.md  quick-fix.md  review-changes.md  save-session-cache.md  start-project.md  update-docs.md  write-commit-text.md
.claude/scripts/: read_cache.rs  save_cache.rs
.github/workflows/: binaries.yml  build.yml  publish.yml
conveniences/: Cargo.toml
examples/: chat_async.rs  chat_cli_async.rs  chat_sync.rs  chat_with_tools_async.rs  chat_with_tools_registry_async.rs  copy_model_async.rs  copy_model_sync.rs  embed_async.rs  embed_sync.rs  generate_async.rs  generate_concise.rs  generate_sync.rs  get_version_async.rs  get_version_custom.rs  get_version_sync.rs  list_models_async.rs  list_models_sync.rs  list_running_models_async.rs  list_running_models_sync.rs  model_cleanup_async.rs  model_create_async.rs  model_delete_async.rs  model_delete_sync.rs  pull_model_async.rs  pull_model_sync.rs  push_model_async.rs  push_model_sync.rs  show_model_async.rs  show_model_sync.rs  tool_registry_async.rs  tools_async.rs
http/: Cargo.toml
http-core/: Cargo.toml
primitives/: Cargo.toml
samples/: Cargo.toml
spec/: api-analysis.md  definition.md
spec/apis/: 04-ollama_api_list_models.yaml  05-ollama_api_list_running_models.yaml  06-ollama_api_show_running_models.yaml  07-ollama_api_create_model.yaml  08-ollama_api_copy_model.yaml  09-ollama__api_pull_model.yaml  11-ollama_api_delete_model.yaml
spec/primitives/: 01-ollama_api_generate.yaml  02-ollama_api_chat.yaml  03-ollama_api_embed.yaml  10-ollama_api_push_model.yaml  12-ollama_api_get_version.yaml
src/: error.rs  lib.rs  main.rs
src/create/: create_request.rs  license_setting.rs  mod.rs
src/http/: api_async.rs  api_sync.rs  client.rs  config.rs  endpoints.rs  mod.rs
src/inference/: chat_message.rs  chat_request.rs  chat_response.rs  chat_role.rs  embed_input.rs  generate_response.rs  keep_alive_setting.rs  logprob.rs  mod.rs  model_options.rs  response_message.rs  think_setting.rs  token_logprob.rs
src/model/: copy_request.rs  create_request.rs  create_response.rs  mod.rs  model_summary.rs  ps_response.rs  pull_request.rs  pull_response.rs  push_request.rs  push_response.rs  show_request.rs  show_response.rs
src/primitives/: chat_message.rs  chat_request.rs  chat_response.rs  chat_role.rs  copy_request.rs  create_request.rs  delete_request.rs  embed_input.rs  embed_request.rs  embed_response.rs  format_setting.rs  generate_request.rs  keep_alive_setting.rs  list_response.rs  mod.rs  model_details.rs  model_options.rs  response_message.rs  running_model.rs  show_model_details.rs  show_request.rs  show_response.rs  stop_setting.rs  think_setting.rs  tool_call.rs  tool_call_function.rs  tool_definition.rs  tool_function.rs  version.rs
src/tools/: erased_tool.rs  mod.rs  tool_call_function.rs  tool_definition.rs  tool_error.rs  tool_registry.rs  tool_trait.rs
tests/: client_async_tests.rs  client_chat_tests.rs  client_config_tests.rs  client_construction_tests.rs  client_copy_model_tests.rs  client_create_model_tests.rs  client_delete_model_tests.rs  client_embed_tests.rs  client_generate_tests.rs  client_list_models_tests.rs  client_list_running_models_tests.rs  client_pull_tests.rs  client_push_tests.rs  client_show_model_tests.rs  client_sync_tests.rs  error_tests.rs  integration_list_tests.rs  integration_tests.rs  model_list_tests.rs  primitives_tests.rs
