[package]
name = "ollama-rs"
version = "0.0.1"
edition = "2024"
description = "A Rust library for integrating with Ollama's native API, providing low-level primitives and high-level conveniences."
keywords = ["ollama", "ai", "llm", "api", "client"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/franciscotbjr/ollama-rs"
exclude = [
    ".claude/*",
    ".github/*",
    "assets/*",
    "spec/*",
    "DEV_NOTES.md",
    "CONTRIBUTING.md",
]

[features]
default = ["http", "primitives"]
conveniences = ["http", "primitives"]
http = []
primitives = []

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "cookies", "http2", "json", "native-tls"] }
async-trait = "0.1.89"
