[package]
name = "ollama-oxide"
version = "0.1.0"
edition = "2024"
description = "A Rust library for integrating with Ollama's native API, providing low-level primitives and high-level conveniences."
keywords = ["ollama", "ai", "llm", "api", "client"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/franciscotbjr/ollama-oxide"
exclude = [
    ".claude/*",
    ".github/*",
    "assets/*",
    "examples/*",
    "spec/*",
    "impl/*",
    "tmp/*",
    "DEV_NOTES.md",
    "CONTRIBUTING.md",
    "ARCHITECTURE.md",
    "impl.md",
]

[features]
default = ["http", "primitives"]
conveniences = ["http", "primitives"]
http = []
primitives = []

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "cookies", "http2", "json", "native-tls"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
url = "2.5.8"

[dev-dependencies]
mockito = "1.7.1"
