[package]
name = "ollama-oxide"
version = "0.1.0"
edition = "2024"
description = "A Rust library for integrating with Ollama's native API, providing low-level primitives and high-level conveniences."
keywords = ["ollama", "ai", "llm", "api", "client"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/franciscotbjr/ollama-oxide"
exclude = [
    ".claude/*",
    ".github/*",
    "assets/*",
    "examples/*",
    "spec/*",
    "impl/*",
    "tmp/*",
    "ARCHITECTURE.md",
    "BLOCKERS.md",
    "CONTRIBUTING.md",
    "DECISIONS.md",
    "DEV_NOTES.md",
    "impl.md",
]

[features]
default = ["http", "primitives"]
conveniences = ["http", "primitives"]
http = []
primitives = []
tools = ["dep:schemars", "dep:futures"]
create = []

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "cookies", "http2", "json", "native-tls"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
url = "2.5.8"

# Optional dependencies for ergonomic tools API (Phase B)
schemars = { version = "1.2.0", optional = true }
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
mockito = "1.7.1"

[[example]]
name = "tools_async"
required-features = ["tools"]

[[example]]
name = "chat_with_tools_registry_async"
required-features = ["tools"]

[[example]]
name = "chat_with_tools_async"
required-features = ["tools"]

[[example]]
name = "create_model_async"
required-features = ["create"]
